adding handwritten recognition using tensorflow

--- a/neural_network/recognize_hand_written_digits.ipynb
+++ b/neural_network/recognize_hand_written_digits.ipynb
@@ -23,13 +23,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this excersize we are going to use the MNIST data set"
+    "For this example I am using MNIST dataset of handwritten images"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
@@ -140,13 +142,6 @@
     "\n",
     "quality = np.where(prediction == y_test[0].ravel(),1,0)\n",
     "print (\"Percentage of correct results is {:.04f}\".format(accuracy_score(y_test,prediction)))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "My experiments produceed 97% of correct results. Let's visualize that."
    ]
   },
   {
